# MonteCarlosimulator

./: .buildinfo  .gitignore  README.md  environment.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  skyrmion.ipynb  step_plot.ipynb  tutorial.ipynb  visualization.ipynb
.doctrees/: environment.pickle  index.doctree
.doctrees/configuration/: index.doctree  installation.doctree  runtest.doctree
.doctrees/gengif/: generategif.doctree  index.doctree
.github/: environment.yml
.github/workflows/: post.yml  pytest.yml  workflow.yml
_sources/: index.rst.txt
_sources/configuration/: installation.md.txt  runtest.md.txt
configuration/: index.html  installation.html  runtest.html
continuous_model/: __init__.py  energy.py  field.py  mesh.py  plot_model.py  simulator.py  tools.py
doc/: conf.py
doc/configuration/: index.rst
doc/gengif/: generategif.md  index.rst
gengif/: generategif.html  index.html
info/: README.md  info.json
normalised_m/: m_10516.npy  m_1052.npy  m_222.npy  m_30302.npy  m_555.npy  m_8164.npy  m_is_skyrmion.npy
postprocessing/iterations/: 1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy  final.npy
postprocessing/plots/: 1.vtk  10.vtk  11.vtk  12.vtk  13.vtk  14.vtk  15.vtk  16.vtk  17.vtk  18.vtk  19.vtk  2.vtk  20.vtk  3.vtk  4.vtk  5.vtk  (+5 more)
reports/: README.md
tests/: test_energy.py  test_simulator.py
trash/: fs_skyrmion_cuboid.npy  internal_energy.ipynb  result_m_8.ipynb
(+95 files in other folders)
